--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "path": "^0.12.7",
-    "util": "^0.12.1"
+    "util": "^0.12.1",
+    "uuid": "^7.0.3"
   }
 }
